finalcosci440/output
fileParser.cpp: In member function ‘void InputParser::printCharFrequency()’:
fileParser.cpp:398:33: error: no matching function for call to ‘std::__cxx11::basic_string<char>::append(char&)’
         line.append(*iterSortedC);
                                 ^
In file included from /usr/include/c++/8.1.0/string:52,
                 from /usr/include/c++/8.1.0/bits/locale_classes.h:40,
                 from /usr/include/c++/8.1.0/bits/ios_base.h:41,
                 from /usr/include/c++/8.1.0/ios:42,
                 from /usr/include/c++/8.1.0/ostream:38,
                 from /usr/include/c++/8.1.0/iostream:39,
                 from fileParser.cpp:91:
/usr/include/c++/8.1.0/bits/basic_string.h:1244:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’ <near match>
       append(const _CharT* __s)
       ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1244:7: note:   conversion of argument 1 would be ill-formed:
fileParser.cpp:398:21: error: invalid conversion from ‘char’ to ‘const char*’ [-fpermissive]
         line.append(*iterSortedC);
                     ^~~~~~~~~~~~
In file included from /usr/include/c++/8.1.0/string:52,
                 from /usr/include/c++/8.1.0/bits/locale_classes.h:40,
                 from /usr/include/c++/8.1.0/bits/ios_base.h:41,
                 from /usr/include/c++/8.1.0/ios:42,
                 from /usr/include/c++/8.1.0/ostream:38,
                 from /usr/include/c++/8.1.0/iostream:39,
                 from fileParser.cpp:91:
/usr/include/c++/8.1.0/bits/basic_string.h:1202:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
       append(const basic_string& __str)
       ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1202:7: note:   no known conversion for argument 1 from ‘char’ to ‘const std::__cxx11::basic_string<char>&’
/usr/include/c++/8.1.0/bits/basic_string.h:1219:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]’
       append(const basic_string& __str, size_type __pos, size_type __n)
       ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1219:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/8.1.0/bits/basic_string.h:1231:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(const _CharT*, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]’
       append(const _CharT* __s, size_type __n)
       ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1231:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/8.1.0/bits/basic_string.h:1261:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, _CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]’
       append(size_type __n, _CharT __c)
       ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1261:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/8.1.0/bits/basic_string.h:1271:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
       append(initializer_list<_CharT> __l)
       ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1271:7: note:   no known conversion for argument 1 from ‘char’ to ‘std::initializer_list<char>’
/usr/include/c++/8.1.0/bits/basic_string.h:1290:9: note: candidate: ‘template<class _InputIterator, class> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::append(_InputIterator, _InputIterator) [with _InputIterator = _InputIterator; <template-parameter-2-2> = <template-parameter-1-2>; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
         append(_InputIterator __first, _InputIterator __last)
         ^~~~~~
/usr/include/c++/8.1.0/bits/basic_string.h:1290:9: note:   template argument deduction/substitution failed:
fileParser.cpp:398:33: note:   candidate expects 2 arguments, 1 provided
         line.append(*iterSortedC);
                                 ^
